# gruff

./: .gitignore  Cargo.toml  SPEC.md
examples/: perf.rs
src/: aggregation.rs  app.rs  camera.rs  churn_provider.rs  cli.rs  colors.rs  config.rs  editor.rs  entry_points.rs  error.rs  export.rs  filter_state.rs  filters.rs  graph.rs  hotspot_scorer.rs  indexer.rs  layout.rs  lib.rs  lib_detect.rs  main.rs  node_label.rs  orphan_detector.rs  package_tree.rs  parser.rs  reachability.rs  recents.rs  resolver.rs  search.rs  shortcuts.rs  watcher.rs  workspace.rs  workspace_state.rs
src/app/: canvas.rs  editor_prompt.rs  help_modal.rs  highlight.rs  search.rs  sidebar.rs  status_bar.rs
