[package]
name = "gruff"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "wgpu"] }
egui = "0.34"
rfd = "0.17"
swc_common = "21"
swc_ecma_parser = "38"
swc_ecma_ast = "23"
swc_ecma_visit = "23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
glob = "0.3"
ignore = "0.4"
notify = "8"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
